brat/test/golden/error/pair.brat
row :: Int, Bool
row = 4, true

pair :: [Int, Bool]
pair = row -- Distinct from a pair
